# Music_Visualizer

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.context/: ai-visuals.md  api-integrations.md  architecture.md  audio-analysis.md  conversational-loop.md  lyrics-extraction.md  tech-stack.md  ui-ux-design.md  video-generation.md
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/hooks/: use-audio-features.ts  use-chat-websocket.ts
client/src/lib/: audio-context.ts
client/src/providers/: chat-ws-provider.tsx
client/src/services/: api.ts  websocket.ts
client/src/stores/: analysis-store.ts  audio-store.ts  chat-store.ts  export-store.ts  render-store.ts  visualizer-store.ts
client/src/tests/: setup.ts
client/src/types/: audio.ts  chat.ts  index.ts  lyrics.ts  render.ts
server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
server/app/: config.py  main.py
server/app/api/: __init__.py  audio.py  chat.py  lyrics.py  render.py  shader.py
server/app/models/: __init__.py  audio.py  chat.py  lyrics.py  render.py
server/app/services/: ai_image_service.py  audio_analyzer.py  llm_service.py  lyrics_service.py  render_service.py  shader_render_service.py  storage.py
server/app/tasks/: __init__.py
server/tests/: test_api_audio.py  test_api_lyrics.py  test_api_render.py  test_audio_analyzer.py  test_chat_phases.py  test_config.py  test_llm_service.py  test_lyrics_service.py  test_models.py  test_render_service.py  test_storage.py
(+34 files in other folders)
