[project]
name = "music-visualizer-server"
version = "0.1.0"
description = "Music Visualizer backend — audio analysis, lyrics, LLM chat, video rendering"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
